# draft

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .pyre_configuration  LICENSE.md  README.md  inventory.ini  playbook.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pre-commit.yaml
ansible/: deploy.yaml  inventory.ini  keygen.yaml  provision.yaml  upload_pub_keys.yaml
ansible/draft/: inventory.ini
ansible/sidecar/: provision.yaml
cli/: setup.py
cli/helper_cli/: cli.py  commands.py
etc/: start_helper_sidecar.sh  start_local_dev.sh
local_dev/config/: coordinator.key  h1.key  h1_mk.key  h2.key  h2_mk.key  h3.key  h3_mk.key  network.toml
local_dev/config/pub/: coordinator.pub  h1.pem  h1_mk.pub  h2.pem  h2_mk.pub  h3.pem  h3_mk.pub
log-viewer/: package-lock.json  package.json
log-viewer/app/: header.tsx  layout.tsx  page.tsx
log-viewer/app/jobs/: page.tsx  servers.tsx
logger/: __main__.py
runner/: main.py
runner/app/: logging.py  main.py  processes.py  settings.py  words.py
runner/app/routes/: start.py  websockets.py
server/: .env.development  .prettierignore  README.md  jest.config.ts  middleware.ts  next.config.js  package-lock.json  package.json  pm2.json  tsconfig.json
server/__tests__/: api_update_query_status_route.test.tsx
server/ansible/: deploy.yaml  inventory.ini  load_secrets.sh  provision.yaml
server/app/: alert.tsx  footer.tsx  header.tsx  layout.tsx  page.tsx  utils.ts
server/app/jobs/: haikunator.tsx  page.tsx  servers.tsx  words.tsx
server/app/login/: GitHubOAuthComponent.tsx  page.tsx
server/data/: helper_party_api_key.ts  helper_party_query_status.ts  query.ts  supabaseTypes.ts  supabase_server_client.ts  supabase_server_service_client.ts
server/lib/: database.types.ts
server/supabase/: config.toml  seed.sql
server/traefik/: traefik.yaml
sidecar/: dynamic_conf.yaml  traefik.yaml
sidecar/ansible/: deploy.yaml  inventory.ini  keygen.yaml  provision.yaml
sidecar/app/: command.py  helpers.py  local_paths.py  logger.py  logging.py  main.py  processes.py  queries.py  settings.py
sidecar/cli/: cli.py  commands.py
sidecar/logger/: __main__.py
sidecar/traefik/: traefik-local.yaml  traefik.yaml
(+44 files in other folders)
