[project]
name="draft"
version="0.0.1"
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE.md"}

dependencies=[
  "Click",
  "click-pathlib",
  "websockets",
  "uvicorn",
  "fastapi",
  "psutil",
  "loguru",
  "pydantic_settings",
  "python-multipart",
  "mnemonic",
  "pyre-check",
  "isort",
]

[project.scripts]
draft = "sidecar.cli.cli:cli"

[tool.setuptools]
py-modules = ["sidecar",]

[tool.isort]
profile = "black"
py_version=39
skip_glob=["server"]
