[project]
name="draft"
version="0.0.1"
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE.md"}

dependencies=[
  "Click",
  "click-pathlib",
  "websockets",
  "uvicorn",
  "fastapi",
  "psutil",
  "loguru",
  "pydantic_settings",
  "python-multipart",
  "mnemonic",
  "pyre-check",
  "isort",
  "pylint",
  "pylint[spelling]",
  "pre-commit",
]

[project.scripts]
draft = "sidecar.cli.cli:cli"

[tool.setuptools]
py-modules = ["sidecar",]

[tool.isort]
profile = "black"
py_version=39
skip_glob=["server"]

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.messages_control]
disable = [
  "C0114",
  "C0115",
  "C0116",
  "W0212",
  "W0719",
  "R0902",
  "R0913",
  "E1121",
]

[tool.black]
target-version = ["py311", ]
include = '\.pyi?$'
